clusters/beryjuio-oci/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    istio-injection: enabled
