clusters/beryjuio-oci/headscale/ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-ui
  namespace: headscale
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: headscale-ui
      app.kubernetes.io/instance: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headscale-ui
        app.kubernetes.io/instance: main
    spec:
      containers:
        - image: ghcr.io/ifargle/headscale-webui:v0.5.6
          name: headscale-ui
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/headscale
          resources: {}
      volumes:
        - name: config
          secret:
            secretName: headscale-settings
        - name: data
          persistentVolumeClaim:
            claimName: headscale-ui
