clusters/beryjuio-oci/headscale/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-ui
  namespace: headscale
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: headscale-ui
      app.kubernetes.io/instance: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headscale-ui
        app.kubernetes.io/instance: main
    spec:
      containers:
        - image: ghcr.io/beryju/headscale-ui:arm
          name: headscale-ui
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
