clusters/beryjuio-oci/headscale/svc-derp.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale-derp
  namespace: headscale
  annotations:
    metallb.io/allow-shared-ip: main
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: headscale
  ports:
    - port: 3478
      name: derp
      protocol: UDP
      targetPort: derp
  externalTrafficPolicy: Cluster
