clusters/beryjuio-oci/headscale/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale-ui
  namespace: headscale
spec:
  selector:
    app.kubernetes.io/name: headscale-ui
  ports:
    - port: 5000
      name: http
      targetPort: http
