clusters/beryjuio-oci/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
spec:
  ingressClassName: istio
  rules:
    - host: headscale.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: headscale
                port:
                  name: http
            path: /
            pathType: Prefix
          - backend:
              service:
                name: headscale-ui
                port:
                  name: http
            path: /ui
            pathType: Prefix
  tls:
    - hosts:
        - headscale.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-headscale
